[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["development-tools::testing", "gui"]
description = "Testing library for relm"
documentation = "https://docs.rs/relm-test/"
license = "MIT"
name = "relm-test"
repository = "https://github.com/antoyo/relm"
version = "0.16.0"

[dependencies]
enigo = "^0.0.12"
gdk = "^0.10.0"
gtk = "^0.6.0"

[dependencies.relm]
path = ".."
version = "^0.16.0"
